<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="90dp"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:fontFamily="@font/cabin"
                android:textColor="#000"
                android:text="@string/info"
                android:textSize="26sp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:transitionName="imageView"
                    android:contentDescription="@null"
                    android:translationZ="1dp"
                    android:scaleType="centerCrop"/>

                <LinearLayout
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/imageView"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="-60dp"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/rounded_background"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cabin"
                        android:text=""
                        android:textStyle="bold"
                        android:textColor="#FFE700"
                        android:textSize="32sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="5dp"
                            android:text="@string/order"
                            android:textColor="#FFF"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtOrder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="10dp"
                            android:text=""
                            android:textColor="#FFE700"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="20dp"
                            android:text="@string/height"
                            android:textColor="#FFF"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="20dp"
                            android:layout_marginLeft="10dp"
                            android:text=""
                            android:textColor="#FFE700"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="5dp"
                            android:text="@string/weight"
                            android:textColor="#FFF"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="10dp"
                            android:text=""
                            android:textColor="#FFE700"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:background="#FFF"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="5dp"
                            android:text="@string/abilities"
                            android:textColor="#FFF"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtLoadingAbilities"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="5dp"
                            android:text="@string/loading_abilities"
                            android:textColor="#FFE700"
                            android:textSize="24sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/abilitiesList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#FFF"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="5dp"
                            android:text="@string/types"
                            android:textColor="#FFF"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/txtLoadingTypes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/cabin"
                            android:layout_marginTop="5dp"
                            android:text="@string/loading_abilities"
                            android:textColor="#FFE700"
                            android:textSize="24sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/typesList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>